--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 license = "BSD-2-Clause"
 categories = ["concurrency", "os", "no-std"]
 
-[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
 libc = "0.2"
 
 [target.'cfg(windows)'.dependencies]
